--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <!-- header start -->
-    <header>
+
+    <header class="container">
         <!-- --------navbar start-------- -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
@@ -30,16 +30,16 @@
                             <a class="nav-link" href="#">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Deals</a>
+                            <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Success</a>
+                            <a class="nav-link" href="#">Support</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My Classes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
                         </li>
 
                     </ul>
@@ -48,7 +48,75 @@
             </div>
         </nav>
         <!-- --------navbar end-------- -->
+
+        <!-- -------slider start------- -->
+        <section class="mt-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100 " alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <h2 class="fw-bold">Get Started Digital <br>
+                                Learning</h2>
+                            <p class="fw-semibold">It is a long established fact that a reader will be
+                                distracted
+                                by the
+                                readable <br>
+                                content of
+                                a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+
+                        </div>
+
+
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption  d-md-block">
+                            <h2 class="fw-bold">Get Started Digital <br>
+                                Learning</h2>
+                            <p class="fw-semibold">It is a long established fact that a reader will be distracted
+                                by the
+                                readable <br>
+                                content of
+                                a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption  d-md-block">
+                            <h2 class="fw-bold">Get Started Digital <br>
+                                Learning</h2>
+                            <p class="fw-semibold">It is a long established fact that a reader will be distracted
+                                by the
+                                readable <br>
+                                content of
+                                a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- -------slider end------ -->
     </header>
+
+    <main>
+
+    </main>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
