--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- --------navbar end-------- -->
 
         <!-- -------slider start------- -->
-        <section class="mt-5">
+        <section class="m-5">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
 
                 <div class="carousel-inner">
@@ -113,8 +113,134 @@
         <!-- -------slider end------ -->
     </header>
 
-    <main>
+    <main class="container p-5">
+        <!-- -----course section---- -->
+        <section>
+            <div class="d-flex justify-content-center align-items-center flex-column mt-5 p-5">
+                <h2 class="fw-semibold">Discover Our Popular
+                    Courses</h2>
+                <p class="fw-light">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="d-lg-flex  gap-2">
+                <div>
 
+                    <div class="card mb-3 border border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text">A UI/UX designer's job is to create user-friendly interfaces
+                                        that enable users to understand.</p>
+                                    <p class="text-primary fw-bold">Price : 20$</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3 border border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-semibold">Javascript Basic to advanced</h5>
+                                    <p class="card-text"> Javascript (JS) is a scripting languages, primarily used on
+                                        the
+                                        Web.
+                                    </p>
+                                    <p class="text-primary fw-bold">Price : 21$</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3 border border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-semibold"> Fullstack Web Development </h5>
+                                    <p class="card-text">
+                                        Web development is the building and maintenance of websites.
+                                    </p>
+                                    <p class="text-primary fw-bold">Price : 22$</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="d-none d-lg-block">
+                    <div class="card mb-3 border border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-semibold"> Digital Marketing </h5>
+                                    <p class="card-text"> Digital Marketing is the term used for the targeted,
+                                        measurable, and interactive marketing of products.</p>
+                                    <p class="text-primary fw-bold">Price : 23$</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3 border border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-semibold">Photography Basic Rules</h5>
+                                    <p class="card-text"> The word Photography literally means 'drawing with light',
+                                        which derives from the Greek photo, meaning to draw.</p>
+                                    <p class="text-primary fw-bold">Price : 25$</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3 border border-0" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-semibold">Motion Graphics</h5>
+                                    <p class="card-text">Motion graphics (sometimes mograph) are pieces of animation or
+                                        digital footage which create the illusion of motion or rotation.</p>
+                                    <p class="text-primary fw-bold">Price : 25$</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-primary btn-lg">See more Courses</button>
+            </div>
+        </section>
+        <!-- -----course end----- -->
+
+        <!-- joining section start -->
+        <section>
+
+        </section>
+        <!-- joining section end -->
     </main>
 
 
