added joining & register button

--- a/index.html
+++ b/index.html
@@ -237,8 +237,56 @@
         <!-- -----course end----- -->
 
         <!-- joining section start -->
-        <section>
+        <section class="bg-primary mt-5 p-4 rounded  ">
+            <!-- <div class="text-white p-5">
+                <h2>Ready to join?</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+            <div class="">
+                <button type="button" class=" bg-white text-primary btn btn-primary btn-lg">Register Now</button>
+            </div> -->
+            <div class="row text-white p-3 d-flex justify-content-center align-items-center">
+                <div class="col-lg-6">
+                    <h2>Ready to join?</h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when
+                        looking at its layout.</p>
+                </div>
+                <!-- <div class="col-lg-6 d-flex justify-content-center ">
+                    <button type="button" class=" bg-white text-primary btn btn-primary btn-lg">Register Now</button>
+                </div> -->
+                <div class="col-lg-6 d-flex justify-content-center">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary bg-white text-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop">
+                        Register Now
+                    </button>
 
+                    <!-- Modal -->
+                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title text-primary" id="staticBackdropLabel">Thanks for Your Click!
+                                    </h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body text-primary">
+                                    Check if the information you privided is correct
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Done</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- joining section end -->
     </main>
