--- a/index.html
+++ b/index.html
@@ -289,6 +289,87 @@
             </div>
         </section>
         <!-- joining section end -->
+        <!-- Question section start -->
+        <section>
+            <div class="d-flex justify-content-center align-items-center flex-column mt-5 p-5">
+                <h2 class="fw-semibold">Frequently Asked Questions</h2>
+                <p class="fw-light">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+            </div>
+
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What is difference between flexbox and Grid?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>Grid is made for two-dimensional layout while Flexbox is for one.</strong> This
+                            means Flexbox can work on either row or columns at a time, but Grids can work on both.
+                            Flexbox, gives you more flexibility while working on either element (row or column). HTML
+                            markup and CSS will be easy to manage in this type of scenario.
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                What is difference between Bootstrap and Tailwind?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                The main difference between TailwindCSS and Bootstrap is that <strong>Tailwind CSS is
+                                    not a UI kit. </strong>
+                                a default theme or built-in UI components. Instead, it comes with predesigned widgets
+                                you can use to build your site from scratch.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                What is CSS Box Model?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+
+                                In CSS, the term "box model" is used when talking about design and layout. The CSS box
+                                model is essentially <strong>a box that wraps around every HTML element.</strong> It
+                                consists of:
+                                margins, borders, padding, and the actual content.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                What is Semantic Tag?
+                            </button>
+                        </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                The HTML semantics refers to <strong>the tags that provide meaning to an HTML page
+                                    rather than
+                                    just presentation.</strong> It makes HTML more comprehensible by better defining the
+                                different
+                                sections and layout of web pages.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <!-- Question section end -->
     </main>
 
 
