--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <main class="container p-5">
         <!-- -----course section---- -->
         <section>
-            <div class="d-flex justify-content-center align-items-center flex-column mt-5 p-5">
+            <div class="text-center mt-5 p-5">
                 <h2 class="fw-semibold">Discover Our Popular
                     Courses</h2>
                 <p class="fw-light">It is a long established fact that a reader will be distracted by the readable
@@ -291,7 +291,7 @@
         <!-- joining section end -->
         <!-- Question section start -->
         <section>
-            <div class="d-flex justify-content-center align-items-center flex-column mt-5 p-5">
+            <div class="text-center mt-5 p-5">
                 <h2 class="fw-semibold">Frequently Asked Questions</h2>
                 <p class="fw-light">It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
@@ -370,6 +370,38 @@
                 </div>
         </section>
         <!-- Question section end -->
+        <!-- Trusted Companies start -->
+        <section class="mt-5 d-none d-lg-block">
+            <div>
+                <div class="text-center ">
+                    <h2 class="fw-semibold ">Trusted by over 800+ companies</h2>
+                </div>
+                <div class="mt-5">
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <img class="w-75" src="images/company/company-1.png" alt="">
+                        </div>
+                        <div class="col-lg-2">
+                            <img class="w-75" src="images/company/company-2.png" alt="">
+                        </div>
+                        <div class="col-lg-2">
+                            <img class="w-75" src="images/company/company-3.png" alt="">
+                        </div>
+                        <div class="col-lg-2">
+                            <img class="w-75" src="images/company/company-4.png" alt="">
+                        </div>
+                        <div class="col-lg-2">
+                            <img class="w-75" src="images/company/company-5.png" alt="">
+                        </div>
+                        <div class="col-lg-2">
+                            <img class="w-100" src="images/company/company-6.png" alt="">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Trusted Companies end -->
     </main>
 
 
