--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Learning Zone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/5614b397df.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <header class="container">
         <!-- --------navbar start-------- -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand fw-semibold" href="#">Learning Zone</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,7 +28,14 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="#courses">Courses</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#classes">My Classes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#register">Register</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
@@ -35,15 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Support</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">My Classes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
 
                     </ul>
-                    <button class="btn btn-outline-primary" type="submit">Register</button>
+
                 </div>
             </div>
         </nav>
@@ -113,9 +115,9 @@
         <!-- -------slider end------ -->
     </header>
 
-    <main class="container p-5">
+    <main class="container p-5 ">
         <!-- -----course section---- -->
-        <section>
+        <section id="courses">
             <div class="text-center mt-5 p-5">
                 <h2 class="fw-semibold">Discover Our Popular
                     Courses</h2>
@@ -180,7 +182,7 @@
 
                 </div>
                 <div class="d-none d-lg-block">
-                    <div class="card mb-3 border border-0" style="max-width: 540px;">
+                    <div class="card mb-3 border border-0" style="max-width:540px;">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
@@ -237,15 +239,7 @@
         <!-- -----course end----- -->
 
         <!-- joining section start -->
-        <section class="bg-primary mt-5 p-4 rounded  ">
-            <!-- <div class="text-white p-5">
-                <h2>Ready to join?</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-                    looking at its layout.</p>
-            </div>
-            <div class="">
-                <button type="button" class=" bg-white text-primary btn btn-primary btn-lg">Register Now</button>
-            </div> -->
+        <section class="bg-primary mt-5 p-4 rounded" id="register">
             <div class="row text-white p-3 d-flex justify-content-center align-items-center">
                 <div class="col-lg-6">
                     <h2>Ready to join?</h2>
@@ -253,9 +247,7 @@
                         when
                         looking at its layout.</p>
                 </div>
-                <!-- <div class="col-lg-6 d-flex justify-content-center ">
-                    <button type="button" class=" bg-white text-primary btn btn-primary btn-lg">Register Now</button>
-                </div> -->
+
                 <div class="col-lg-6 d-flex justify-content-center">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary bg-white text-primary" data-bs-toggle="modal"
@@ -290,7 +282,7 @@
         </section>
         <!-- joining section end -->
         <!-- Question section start -->
-        <section>
+        <section id="classes">
             <div class="text-center mt-5 p-5">
                 <h2 class="fw-semibold">Frequently Asked Questions</h2>
                 <p class="fw-light">It is a long established fact that a reader will be distracted by the readable
@@ -409,5 +401,16 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 </body>
+<footer class=" container bg-black text-white text-center mt-3 p-3">
+    <h3 class="fw-bold ">Learning Zone</h3>
+    <p><span>Office 41, Zawaya Buildin, Ghala Muscat,
+            Sultanate of Oman</span></p>
+    <p><span>Privacy Ploicy | Terms of use</span></p>
+    <p>
+        <a class="text-white m-2" href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+        <a class="text-white m-2" href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+        <a class="text-white m-2" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+    </p>
+</footer>
 
 </html>
